--- a/style.css
+++ b/style.css
@@ -15,7 +15,25 @@ hr {
 
 .search > * {
 	margin: 8px;
-	border-radius: 5px;
+	border-radius: 4px;
+}
+
+@media only screen and (max-width: 768px) {
+	.row > img {
+		display: none;
+	}
+}
+
+@media only screen and (max-width: 700px) {
+	.display-3 {
+		font-size: 25px;
+	}
+}
+
+@media only screen and (max-width: 1000px) {
+	.display-3 {
+		font-size: 50px;
+	}
 }
 
 #search-button {
