--- a/style.css
+++ b/style.css
@@ -67,11 +67,30 @@ hr {
 	height: 400px;
 }
 
-.jumbotron {
+/* .jumbotron {
 	background-image: linear-gradient(
 		0deg,
 		#3eecac 0%,
 		#ee74e1 50%,
 		#fcba03 100%
 	);
+} */
+
+/* .jumbotron {
+	background-image: url("https://media.giphy.com/media/l2v1YQMVH8rEAstMyK/giphy.gif");
+	width: 100%;
+} */
+
+.jumbotron {
+	background: url("https://media.giphy.com/media/U3qYN8S0j3bpK/giphy.gif")
+		no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	height: auto;
 }
+
+/* .display-3 {
+	color: white;
+} */
